--- a/Varhead/Varhead.csproj
+++ b/Varhead/Varhead.csproj
@@ -37,18 +37,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="License.txt">
+    <None Include="..\License.txt">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
-    <None Include="Readme.md">
+    <None Include="..\Readme.md">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\LSender\LSender.csproj" />
   </ItemGroup>
 
 </Project>
